[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnsh"
description = "Shell over Reticulum" 
authors = [
    {name = "acehoss", email = "acehoss@acehoss.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "rns>=1.1.1"
]

scripts = {rnsh = "rnsh.rnsh:rnsh_cli"}

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "rnsh._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "skip_ci: marks tests that should not be run in CI builds (deselect with '-m \"not skip_ci\"')"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3", 
    "safety>=2.3.5",
    "tomli>=2.0.1"
]